--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
 
 <body>
     <div class="choose">
-
-        <div class="choose-menu">
-            <div class="choose-menu-links">
-                <a href="/index.html"><i class="ph-house-light"></i></a>
-                <a href="/pages/journal.html"><i class="ph-magnifying-glass-plus-fill"></i>journal</a>
-                <a href="/pages/about.html"><i class="ph-users-three-fill"></i>about</a>
-                <a href="/pages/projects.html"><i class="ph-gear-six-fill"></i>projects</a>
-            </div>
-        </div>
-
+        <script src="/js/navBar.js"></script>
         <div class="choose-side">
             <div class="choose-side-back">
                 <div></div>
@@ -158,6 +149,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Passions+Conflict&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <script src="js/index.js"></script>
     <script src="https://code.jquery.com/jquery-1.7.2.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fitty/2.3.6/fitty.min.js"></script>
     <script src="https://unpkg.com/phosphor-icons"></script>
