--- a/pages/journal.html
+++ b/pages/journal.html
@@ -8,15 +8,7 @@
 </head>
 
 <body>
-    <div class="choose-menu">
-        <div class="choose-menu-links">
-            <a href="/index.html"><i class="ph-house-light"></i></a>
-            <a href="/pages/journal.html"><i class="ph-magnifying-glass-plus-fill"></i>journal</a>
-            <a href="/pages/about.html"><i class="ph-users-three-fill"></i>about</a>
-            <a href="/pages/projects.html"><i class="ph-gear-six-fill"></i>projects</a>
-        </div>
-    </div>
-
+    <script src="/js/navBar.js"></script>
     <div class="choose-wrapper">
         <div class="choose-cat">
             <div class="choose-cat-top">
@@ -84,6 +76,36 @@
                             one had to design it with the potential to adapt to mobile, thus extra
                             grid-template-columns when that column is actually not used in the current
                             working device size.
+                        </div>
+                        <div class="choose-board-recent">
+                            written by <span>Ivan Yan</span>
+                            <br>
+                            <span>26 / Oct / 2025</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="choose-board">
+                    <a href="#" class="choose-board-name">
+                        <div>Lab 3</div>
+                        <b>Javascript & Dom Manipulation</b>
+                    </a>
+                    <div class="choose-board-bulk">
+                        <div class="choose-board-sub">
+                            <div>Reuse Components</div>
+                            <div>User Interaction</div>
+                        </div>
+                        <div class="choose-board-desc">
+                            I mainly use querySelector as it uses css selectors. It makes it easier to refractor
+                            styles as one don't have to recall whether they used getElementBy(ID/Class).
+                            <Br>
+                            The most challenging part when it comes to linking javascript to html would be
+                            the DOM Manipulation. There is many methods, like setting innerHTML, append, 
+                            insertAdjacentHTML...
+                            <Br>
+                            To debug javscript, I maninly use console.log to find where the value start to
+                            go wrong. However, since currently the code is simple, i can go directly to
+                            the error by seeing the line count in the null reference error.
                         </div>
                         <div class="choose-board-recent">
                             written by <span>Ivan Yan</span>
