--- a/pages/journal.html
+++ b/pages/journal.html
@@ -27,12 +27,16 @@
                         </div>
                         <div class="choose-board-desc">
                             When editing the respiratory, one difficulty I encountered was switching GitHub
-                            credentials, as my credentials were still the ones of my previous GitHub account. The solution
-                            was simple in that one simply switches an account in VScode, what is confusing at that time was
-                            that I thought the credentials had something to do with git, and then started looking deeply into
+                            credentials, as my credentials were still the ones of my previous GitHub account. The
+                            solution
+                            was simple in that one simply switches an account in VScode, what is confusing at that time
+                            was
+                            that I thought the credentials had something to do with git, and then started looking deeply
+                            into
                             git.
                             Another difficulty along the way was hosting the web app using PythonAnywhere. Since
-                            the code given by the link is a static site, meaning there’s no app.py, so I had to add a static
+                            the code given by the link is a static site, meaning there’s no app.py, so I had to add a
+                            static
                             directory under static files to host this static site.
                             <Br>
                             <Br>
@@ -100,7 +104,7 @@
                             styles as one don't have to recall whether they used getElementBy(ID/Class).
                             <Br>
                             The most challenging part when it comes to linking javascript to html would be
-                            the DOM Manipulation. There is many methods, like setting innerHTML, append, 
+                            the DOM Manipulation. There is many methods, like setting innerHTML, append,
                             insertAdjacentHTML...
                             <Br>
                             To debug javscript, I maninly use console.log to find where the value start to
@@ -111,6 +115,44 @@
                             written by <span>Ivan Yan</span>
                             <br>
                             <span>26 / Oct / 2025</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="choose-board">
+                    <a href="#" class="choose-board-name">
+                        <div>Lab 4</div>
+                        <b>Introduction to API</b>
+                    </a>
+                    <div class="choose-board-bulk">
+                        <div class="choose-board-sub">
+                            <div>Storage API</div>
+                            <div>Browser API</div>
+                            <div>Third Party API</div>
+                        </div>
+                        <div class="choose-board-desc">
+                            I chose local storage, fetch, and Youtube API. Local storage is for things like
+                            theme customizations, fetch is for syncing files that might be updated often
+                            on ther server, and the youtube player to play music.
+                            <Br>
+                            For local storage, I decided to use it for a client customised message. To avoid
+                            the huge style difference when using &ltinput I tried the contenteditable attribute,
+                            however it won't trigger the change event. Therefore I used the &lttextarea>, as it has
+                            less differeniation from &ltdiv>.
+                            <Br>
+                            For Fetch, I initially decided to use it for fetching journal entries, however a
+                            major issue was that json did not supported multiline strings, thus in consideration
+                            of maitainability, this functionality was forfeited.
+                            <Br>
+                            For the Youtube API, I used code I written before, and the biggest challenge was
+                            recalling what I did before, as I had two versions, one uses Audio API to play
+                            mp3 url links, while one is styled differently and uses Youtube API. Also, the
+                            fact that onYouTubeIframeAPIReady() is not called every refresh is also quite
+                            misleading.
+                        </div>
+                        <div class="choose-board-recent">
+                            written by <span>Ivan Yan</span>
+                            <br>
+                            <span>25 / Nov / 2025</span>
                         </div>
                     </div>
                 </div>
