--- a/index.html
+++ b/index.html
@@ -84,11 +84,8 @@
         <div class="choose-header">
 
             <div class="choose-nav">
-                <i class="ph-house-fill"></i>
-                <a href="">choose your weapon</a>
-                <a href="">category name</a>
-                <a href="">board name</a>
-                <a href="">thread name</a>
+                <div>Token of the Day</div>
+                <div>abcdefg</div>
             </div>
 
             <div class="choose-header-welcome">
