--- a/pages/journal.html
+++ b/pages/journal.html
@@ -156,6 +156,30 @@
                         </div>
                     </div>
                 </div>
+                <div class="choose-board">
+                    <a href="#" class="choose-board-name">
+                        <div>Lab 5</div>
+                        <b>Python & Json Backend Data</b>
+                    </a>
+                    <div class="choose-board-bulk">
+                        <div class="choose-board-sub">
+                            <div>Python</div>
+                            <div>Json</div>
+                        </div>
+                        <div class="choose-board-desc">
+                            By using a json file, data is stored on the server then fetched by the client. This 
+                            helps with keeping the data up to date. To modify these json files with python, one
+                            would use python json package. In the PWA, a random token is generated in a python script,
+                            then put into the syncInfo.json, only to be fetched on loading of index.html by index.js
+                            to replace the token of the day bar.
+                        </div>
+                        <div class="choose-board-recent">
+                            written by <span>Ivan Yan</span>
+                            <br>
+                            <span>25 / Nov / 2025</span>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
